# rustos

./: .gitignore  Cargo.toml  Makefile  Xargo.toml  aarch64-unknown-none.json  commands.md  conf.toml  config.toml  link.ld  qemu.sh  readme.md  rustdoc.sh
armv8_a/: Cargo.toml
armv8_a/src/: lib.rs  raw.rs
kernel/: Cargo.toml  build.rs
kernel/src/: arch.rs  main.rs  process.rs  scheduler.rs  sp.s  uart.rs
kernel/src/arch/: aarch64.rs
kernel/src/arch/aarch64/: exceptions.rs  header.s  init.s  link.ld  macros.rs  mod.rs  print.rs
kernel/src/arch/aarch64/config/: imx8.rs  mod.rs  qemu_virt.rs
kernel/src/arch/aarch64/exceptions/: frame.rs  mod.rs  syndrome.rs
src/: head.s  kernel.rs  main.rs  sp.s
src/arch/: mod.rs
src/arch/aarch64/: macros.rs  mod.rs  print.rs
src/arch/aarch64/config/: imx8.rs  mod.rs  qemu_virt.rs
targets/: aarch64-unknown-none.json
