[package]
name = "rustos"
version = "0.1.0"
authors = ["Benjamin Bäumler <baeumler.benjamin@qqwa.de>"]

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "sysroot"

[dependencies]
linked_list_allocator = "0.6.2"
armv8_a = { path = "../armv8_a" }
bitfield = "0.13.0"

[features]
verbose-exception-handler = []
