cargo-features = ["edition"]

[package]
name = "rustos"
version = "0.1.0"
authors = ["Benjamin Bäumler <baeumler.benjamin@qqwa.de>"]
edition = '2018'

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "sysroot"

[dependencies]
armv8_a = { path = "../armv8_a" }
bitfield = "0.13.0"

[build-dependencies]
toml = "0.4.6"
